 - Add Spring.GetFrameTimer(bool synced) to get a timer for the start of the frame
   this should give better results for camera interpolations.
 - Add an optional weaponNum argument to SetUnitTarget.
 - Update shader errorlog even if compilation was successful
 - Remove updateMatrix argument in Spring.UnitScript.{Move,Turn} as matrices will be automatically updated if necessary.
 - Add new Spring.Start callout for launching a new Spring instance without terminating the existing one.

Save/Load:
 ! remove UseCREGSaveLoad and add /LuaSave which generates .slsf files
 ! compress creg saves
 - SaveFile can be specified in start script in order to start from a save

Rendering:
 - reduce number of team-color updates for custom shaders
 - use frame-extrapolation for smoother feature movement
 - draw all model nanoframe stages with shaders by default
 - skip drawing icons for void-space units
 - disable BumpWaterRefraction = 2 for now.

AI:
 - make skirmishAiCallback_Unit_getResource{Use,Make} not round their return values to ints
 - RulesParams are now accessible through skirmishAiCallback_{Game,Unit,Team,Feature}_getRulesParamValue{String,Float}

Misc:
 - make the time server spends in sleep calls configurable (for dedicated hosts)
 - rename the 'ReflectiveWater' config-key to 'Water' (to match the command)
 - set the 'GroundDetail' config-val only when it changes, not on shutdown
 - add '/GroundDetail <val>' text command to modify ground detail on the fly
 - auto-normalize normals and tangents for all AssImp-loaded models
 - add a gameDeferredDraw=5 drawMode value (handy for Draw{Unit,Feature} to know)

Bugfixes:
 - fix invisible OBJ models
 - fix gl.DeleteShader allowing repeated deletion
 - fix drawing of being-built units during deferred pass
 - fix invisible ground on voidwater maps when AdvMapShading=0 (in L-view)
 - fix Spring.SetSunLighting crash when AdvMapShading=0
 - fix Spring.ValidUnitID to accept nils again