@@ -3,6 +3,7 @@
 # > find . -name "*.cpp"" | sort
 SET(sources_engine_Lua
 		"${CMAKE_CURRENT_SOURCE_DIR}/LuaArchive.cpp"
+		"${CMAKE_CURRENT_SOURCE_DIR}/LuaAI.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/LuaBitOps.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/LuaConstCMD.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/LuaConstCMDTYPE.cpp"
