@@ -7,6 +7,7 @@
 
 #include "LuaInclude.h"
 #include "LuaArchive.h"
+#include "LuaAI.h"
 #include "LuaUnsyncedCtrl.h"
 #include "LuaCallInCheck.h"
 #include "LuaConstGL.h"
@@ -107,6 +108,7 @@ CLuaIntro::CLuaIntro()
 	    !AddEntriesToTable(L, "VFS",       LuaZipFileReader::PushUnsynced) ||
 	    !AddEntriesToTable(L, "VFS",       LuaZipFileWriter::PushUnsynced) ||
 	    !AddEntriesToTable(L, "VFS",         LuaArchive::PushEntries)      ||
+	    !AddEntriesToTable(L, "VFS",         LuaAI::PushEntries)           ||
 	    !AddEntriesToTable(L, "Script",      LuaScream::PushEntries)       ||
 	    //!AddEntriesToTable(L, "Script",      LuaInterCall::PushEntriesUnsynced) ||
 	    //!AddEntriesToTable(L, "Script",      LuaLobby::PushEntries)        ||
